5.8 - Firefox
- Ported over to firefox:
    - Custom themes
    - storage
- Add reminder to refresh the page
- Fix colors not restoring
- Use local storage instead of sync
- Remove fixes for smartschool++ because it doesnt exist for firefox


5.8
- Add compatibility with Smartschool++ (https://chromewebstore.google.com/detail/smartschool++/bdhficnphioomdjhdfbhdepjgggekodf)

5.7
- Add total row (by Iliannnn)

5.6
- Fixed styling to not interfere with Smartschools own table

5.5
- Added tooltips when hovering over a result in grid view
- Code cleanup

5.4:
- Fixed table overflowing container
- Added disclaimer to table

5.3:
- Fixed period buttons not working
- Auto open latest period
- Improve button style

5.2:
- Fixed grid not loading when non standard evaluations are given

5.1:
- Added a grid view with totals to Resultaten

5.0:
- Removed custom images
- Made extension open source

4.4:
- Fixed theme in "taken" and player selector for messages.

4.3:
- Changed name to 'Smarter Smart School'.
- Fixed total grades not apearing when clicking on a notification.
- Fixed typo in image explanation

4.2:
- Added totals to list view
- Fixed themes for password reset

4.1:
- Changed defoult dark theme
- Fixed theme for new message dialog
- Fixed totals apearing twice

4.0:
- Aded custum syles: Set your own background and forground color.
- Fixed notifcatino theme
- Code cleanup