@@ -58,15 +58,6 @@
         "BetterStyle.js"
       ],
       "run_at": "document_start"
-    },
-    {
-      "matches": [
-        "https://*.smartschool.be/"
-      ],
-      "js": [
-        "BeterAnime.js"
-      ],
-      "run_at": "document_end"
     }
   ],
   "web_accessible_resources": [
